# shinobi-no-sho

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TUTORIAL.md  mypy.ini  play.bat  play.sh  pyproject.toml  ruff.toml
data/: phase_h_cost.json
docs/: 01-PROJET-RECAP-COMPLET.md  01_constraints.md  02-PROJET-ROADMAP-SUITE.md  02_stack.md  03_project_structure.md  04_canonical_data.md  05_data_pipeline.md  06_game_engine.md  07_goal_system.md  08_world_simulation.md  09_rag.md  10_llm_integration.md  11_persistence.md  12_cli.md  13_roadmap.md  14_i18n.md  15_i18n_maintenance.md
research/: CHANGELOG.md  PROJECT_STATUS.md  RELEASE_NOTES.md  anti-hallucination-rag-narratif-v2.md  canon-cleanup-handoff.md  canon-completion-plan.md  canon-completion-report.md  i18n-batch-report.md  i18n-completion-report.md  i18n-phase-h-report.md  i18n-wiki-translation-report.md  pass2-batch-postmortem.md  pass2-batch50-postmortem.md  pass2-extraction-spec.md  pass3-comparative-report.md  phase1-runbook.md  pillar5-instructions.md  scraper-corruption-report.md  scraping-pipeline-audit.md  timeline-engine-roadmap.md  wiki-sections-token-stats.md  world-simulation-gap-analysis.md
scripts/: build_bm25_index.py  build_canonical_jsons.py  build_rag_index.py  demo_anti_hallu.py  derive_canon_eligibility.py  enrich_with_wiki_sections.py  extract_i18n_strings.py  fill_missing_wiki_sections.py  finalize_pipeline.py  i18n_batch_translate.py  i18n_extract_new_strings.py  i18n_lint.py  i18n_regenerate_phase_h.py  i18n_select_top100.py  i18n_translate_new.py  i18n_translate_prompts.py  i18n_translate_wikis.py  (+28 more)
(+1250 files in other folders)
