[project]
name = "shinobi-no-sho"
version = "0.0.0"
description = "Simulateur de vie narratif dans l'univers de Naruto, pilote par un LLM local."
requires-python = ">=3.11"
authors = [
  {name = "Matteo (Hidden Lab)"}
]
readme = "README.md"
license = {text = "Private"}

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
  "httpx>=0.27",
  "structlog>=24.0",
  "rich>=13.7",
  "typer>=0.12",
  "beautifulsoup4>=4.12",
  "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "hypothesis>=6.100",
]

[project.scripts]
shinobi = "shinobi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shinobi"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "requires_llm: marque les tests qui necessitent un serveur LLM local actif",
  "slow: marque les tests lents",
]
